# VarioCorreKrigE

./: README.md  pyproject.toml  requirements.txt  theory.ipynb
Examples/: VarioCorreKrige_variofit_correfit_examples.ipynb
Examples/Data/: im_dwbar.csv
VarioCorreKrigE/: __init__.py  correfit.py  skrig.py  utils.py  variofit.py
