[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "VarioCorreKrigE"
authors = [
    { name = "AaronJR474" },
]
description = "Package for Variogram, Correlation and Kriging Estimation"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[tool.setuptools]
packages = ["VarioCorreKrigE"]

[tool.setuptools.exclude-package-data]
"*" = ["Examples*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
